style.scss
/*!
Theme Name: Salzhimmel
Theme URI: http://www.salzhimmel.de
Description: Theme with a header and a main navigation on the left side.
Author: Hendrik Wuerz
Author URI: http://www.salzhimmel.de
*/
@import 'reset';

$fontColor: #3d3a27;
$backgroundColor: #eeeeff;
$backgroundColorDark: #ddddee;
$backgroundColorHover: rgba(0,50,255,0.2);
$headerHeight: 100px;
$headerHeightSmall: 50px;
$headerHeightMobile: 120px;
$menuWidthFullSize: 220px;
$menuWidthMinSize: 170px;
$menuIconSize: 30px;
$menuIconSizeMobile: 80px;
$menuFadingTime: 1s;

body {
  position: absolute;
  min-height: 100%;
  width: 100%;
}

div, span, p, a {
  font-size: 18px;
  line-height: 24px;
  color: $fontColor;
}

p {
  padding: 5px 0;
}

h1 {
  font-size: 37px;
  line-height: 50px;
}

h2 {
  font-size: 27px;
  line-height: 38px;
}

html.background #background {
  display: block;
}
#background {
  position: absolute;
  background: url("img/header.jpg") center;
  width: 100%;
  top: 0;
  bottom: 0;
  z-index: -1;
  display: none;
}

#status-bar {
  position: absolute;
  width: 100%;
  text-align: right;

  .progress {
    width: 0;
    position: relative;
    height: 5px;
    background-color: #00b020;
    -webkit-transition: width 0.3s;
    -moz-transition: width 0.3s;
    -ms-transition: width 0.3s;
    -o-transition: width 0.3s;
    transition: width 0.3s;
  }

  .login-status {
    margin-right: 10px;
  }
}

#page-wrapper {
  position: relative;
  max-width: 1200px;
  margin: auto;
  overflow: hidden;
}

header {
  height: $headerHeight;
  position: relative;

  img.logo {
    position: absolute;
    height: 95%;
    padding-left: $menuWidthFullSize / 2 - 45px;
  }

  h3 {
    position: absolute;
    left: $menuWidthFullSize;
    color: #000;
    right: 0;
    top: 0;
    text-align: center;
    font-size: 70px;
    line-height: $headerHeight;
  }

  img.menu {
    position: absolute;
    display: none;
  }

}

.wrapper {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-flow: row nowrap;
  flex-flow: row nowrap;
}

nav {
  order: 1;
  flex: 1;
  max-width: $menuWidthFullSize;

  li {
    background-color: $backgroundColor;
  }

  a {
    position: relative;
    font-size: 20px;
    line-height: $menuIconSize + 10px; // 10px padding on top and bottom
    text-decoration: none;
    display: block;
    padding: 5px 5px 5px ($menuIconSize + 10px); // icon has 5px padding and text should have 5px padding too

    -webkit-transition: background-color 0.2s;
    -moz-transition: background-color 0.2s;
    -ms-transition: background-color 0.2s;
    -o-transition: background-color 0.2s;
    transition: background-color 0.2s;

    &:hover {
      background-color: $backgroundColorHover;
    }

    &:before {
      background: no-repeat center;
      background-size: $menuIconSize;
      width: $menuIconSize;
      height: 100%;
      top: 0;
      left: 5px;
      position: absolute;
      content: '';
    }
  }

  li.home > a:before { background-image: url("img/home.svg") }
  li.bond > a:before { background-image: url("img/bond.svg") }
  li.cube > a:before { background-image: url("img/cube.svg") }
  li.java > a:before { background-image: url("img/java.svg") }
  li.book > a:before { background-image: url("img/book.svg") }
  li.technics > a:before { background-image: url("img/technics.svg") }
  li.stereoscopy > a:before { background-image: url("img/stereoscopy.svg") }

}

main {
  order: 2;
  flex: 2;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 100px;
}

.box {
  $boxPadding: 10px;
  background-color: $backgroundColor;
  // publication date
  padding: $boxPadding $boxPadding $boxPadding + 40px; // publication date needs 40px
  margin-bottom: $boxPadding + 10px;
  overflow: hidden;
  position: relative;

  img.alignleft {
    float: left;
    margin-right: 10px;
  }

  img.aligncenter {
    display: block;
    margin: 10px auto;
  }

  img.alignright {
    float: right;
    margin-left: 10px;
  }

  &.no-date { // this box has no publication date. So no extra space is needed.
    padding: $boxPadding;
  }

}

/**
 * decrease menu width on smaller screens
 */
html.smaller-navigation {
  header {
    img.logo {
      padding-left: $menuWidthMinSize / 2 - 35px;
    }
    h3 {
      left: $menuWidthMinSize;
    }
  }
  nav {
    max-width: $menuWidthMinSize;
  }
}

/**
 * hide menu text on small screens
 */
html.minimized-navigation {
  nav {
    z-index: 100;
    max-width: $menuIconSize + 10px;

    li {
      width: $menuIconSize + 10px;
      -webkit-transition: width 0.2s;
      -moz-transition: width 0.2s;
      -ms-transition: width 0.2s;
      -o-transition: width 0.2s;
      transition: width 0.2s;
      &:hover {
        width: $menuWidthFullSize;
        span {
          width: auto;
          display: inline;
        }
      }
    }
    span {
      width: 0;
      overflow: hidden;
      display: inline-block;
    }
  }
}

/**
 * minimize header
 */
html.minimized-header {

  header {
    height: $headerHeightSmall;
    background-color: $backgroundColor;
    margin: 10px 10px 10px 0;

    img.logo {
      height: $headerHeightSmall - 10px; // padding top and bottom (=10px)
      padding: 5px 2px;
    }
    h3 {
      font-size: 40px;
      line-height: $headerHeightSmall;
      left: 0
    }
  }
}

/**
 * no navigation
 * used for MOBILE layout
 + needs 'minimal-header' enabled
 */
html.no-navigation {

  div, span, p, a {
    font-size: 40px;
    line-height: 50px;
  }
  h1 {
    font-size: 60px;
    line-height: 75px;
  }
  h2 {
    font-size: 50px;
    line-height: 60px;
  }
  .box {
    padding-bottom: 80px; // publication date
  }

  #page-wrapper {
    max-width: none; // do not center page on high resolution displays
  }

  header {
    height: $headerHeightMobile;
    margin: 0;

    img.logo {
      height: $headerHeightMobile - 20px; // padding top and bottom (=20px)
      padding: 10px;
    }

    h3 {
      font-size: 80px;
      line-height: $headerHeightMobile;
    }

    img.menu {
      display: block;
      position: absolute;
      right: 0;
      top: 0;
      height: $headerHeightMobile - 60px; // padding top and bottom (=60px)
      padding: 30px 20px;
      cursor: pointer;
    }
  }

  // disable flex layout
  .wrapper {
    display: block;
  }

  nav {
    flex: none;
    position: relative;
    background-color: $backgroundColor;
    margin-bottom: 20px;
    max-width: 100%;
    height: 0;
    overflow: hidden;

    li, li:hover {
      width: 100%;
    }
    a {
      padding-left: $menuIconSizeMobile + 10;
      &:before {
        background-size: $menuIconSizeMobile;
        width: $menuIconSizeMobile;
      }
    }
    span {
      visibility: visible;
      font-size: 90px;
      line-height: 140px;
    }
  }

  main {
    flex: none;
  }

  &.navigation-visible {
    nav {
      height: 100%;
    }
  }

  main {
    margin: 0;
  }
}

